1999-11-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Again, Juergen Schoenwaelder contributed
	a huge chunk of patches that improve dump formats. The CORBA
	IDL output is updated and an smidump option to suppress comments
	(-s) has been added.

1999-10-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smistrip.in (VERSION): smistrip (plus man page) has
	been added to the libsmi distribution. It allows to extract
	modules from text documents like RFCs and I-Ds.

1999-10-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/error.c: added check for illegal type restrictions
	in SEQUENCEs.

1999-10-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/Makefile.am: the MIB module files have been reorganized in
	subdirectories and updated to the latest RFCs and IANA modules.

1999-10-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* test/Makefile.am: restructured tests slightly.
	
	* mibs/Makefile.am: added a huge amount of (nearly all current?)
	Standard MIBS and some more. They still have to be checked
	for completeness and `libsmi robustness'.

1999-10-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed problems with OID DEFVALS in SMIv1
	modules. now {0 0} works.

	* lib/smi.c (smiGetParentNode): fixed a bug where the wrong
	node has been returned for implicitly defined nodes as used
	in notification types.

	* lib/smi.c (smiGetNextNode): fixed a similar bug here that
	caused loops.

	* lib/parser-smi.y: added check for multiple groups or
	object refinements for the same object in a single
	compliance statement. this caused loops before.

	* tools/smidump.c: applied another patch by Juergen Schoenwaelder
	that beautifies various dump formats and introduces a regression
	test system.
	
1999-10-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed range of Counter64.

	* tools/dump-types.c: applied a patch by Juergen Schoenwaelder
	that beautifies the dump formats for imports and types.
